// This is the public API offered by your entity.
syntax = "proto3";

import "google/protobuf/empty.proto";
import "akkaserverless/annotations.proto";
import "google/api/annotations.proto";

package $package;

option java_outer_classname = "CounterApi";

message SetValueCommand {
    string counter_id = 1 [(akkaserverless.field).entity_key = true];
    int32 value = 2;
}

message GetValueCommand {
    string counter_id = 1 [(akkaserverless.field).entity_key = true];
}

message CurrentCounter {
    int32 value = 1;
}

service CounterService {
    option (akkaserverless.service) = {
        type : SERVICE_TYPE_ENTITY
        component : ".domain.Counter"
    };
    rpc SetValue(SetValueCommand) returns (google.protobuf.Empty);
    rpc GetValue(GetValueCommand) returns (CurrentCounter);
}
